@@ -161,3 +161,4 @@ Changes between Qt3 and Qt4 port (to be completed)
     - Q3ListView -> QTreeWidget
 - ported project manager
     - Q3ListView -> QTreeWidget
+- Q3PaintDeviceMetrics -> QPrinter->pageRect()
